// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CIHomePage should move to trial in progress page when query param trial is true 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main body"
      style="--image-url: url(test-file-stub);"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          style="align-items: center;"
        >
          <h1
            class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-large StyledProps--color StyledProps--color-black100"
          >
            ci.continuous
          </h1>
          <p
            class="StyledProps--font StyledProps--main StyledProps--border StyledProps--color StyledProps--color-white StyledProps--background-orange500 StyledProps--font-align-center"
            style="width: 120px; height: 18px;"
          >
            common.trialInProgress
          </p>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-bottom-xxlarge"
            style="line-height: 2; width: 500px;"
          >
            common.trialInProgressDescription
          </p>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
              style="width: 200px; height: 45px;"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                createProject
              </span>
            </button>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-normal StyledProps--color StyledProps--color-black StyledProps--padding-small"
            >
              orSelectExisting
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CIHomePage should render HomePageTemplate when return success with data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main body"
      style="--image-url: url(test-file-stub);"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <h1
          class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-large StyledProps--color"
        >
          ci.continuous
        </h1>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          ci.dashboard.subHeading
        </p>
        <a
          class="bp3-button Button--button StyledProps--font StyledProps--main link StyledProps--color StyledProps--font StyledProps--font-size-normal Button--with-current-color Button--link"
          href="https://ngdocs.harness.io/category/zgffarnh1m-ci-category"
          rel="noreferrer noopener"
          role="button"
          tabindex="0"
          target="_blank"
        >
          <span
            class="bp3-button-text"
          >
            ci.learnMore
          </span>
        </a>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex"
        >
          <a
            class="createBtn"
            href="/account/undefined/home/projects"
          >
            createProject
          </a>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
          >
            orSelectExisting
          </p>
          <span
            style="flex-grow: 1;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CIHomePage should render the home page template when the current user is not created from NG 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main pageBody"
    data-name="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main body"
      style="--image-url: url(test-file-stub);"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      >
        <h1
          class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-large StyledProps--color"
        >
          ci.continuous
        </h1>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color"
        >
          ci.dashboard.subHeading
        </p>
        <a
          class="bp3-button Button--button StyledProps--font StyledProps--main link StyledProps--color StyledProps--font StyledProps--font-size-normal Button--with-current-color Button--link"
          href="https://ngdocs.harness.io/category/zgffarnh1m-ci-category"
          rel="noreferrer noopener"
          role="button"
          tabindex="0"
          target="_blank"
        >
          <span
            class="bp3-button-text"
          >
            ci.learnMore
          </span>
        </a>
        <div
          class="Layout--horizontal Layout--layout-spacing-large StyledProps--main StyledProps--flex"
        >
          <a
            class="createBtn"
            href="/account/undefined/home/projects"
          >
            createProject
          </a>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--color StyledProps--color-black"
          >
            orSelectExisting
          </p>
          <span
            style="flex-grow: 1;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CIHomePage should return error page if call fails 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
    style="width: 100%; height: 100%;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
      style="align-items: center; width: 500px;"
    >
      <span
        class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
        icon="error"
      >
        <svg
          data-icon="error"
          height="32"
          viewBox="0 0 20 20"
          width="32"
        >
          <desc>
            error
          </desc>
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
      >
        call failed
      </p>
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Retry
        </span>
      </button>
    </div>
  </div>
</div>
`;
